display displaycontour enriched to process formulas and create gnu file